8208. Fixed alignments of searchfield icons in RTL

--- a/src/components/toolbar/_toolbar-new.scss
+++ b/src/components/toolbar/_toolbar-new.scss
@@ -123,3 +123,27 @@
     }
   }
 }
+
+html[dir='rtl'] {
+  .toolbar {
+    &:not(.standalone) .searchfield-wrapper.toolbar-searchfield-wrapper:not(.has-categories):not(.is-open) {
+      input {
+        padding-left: 31px;
+      }
+
+      .icon:not(.icon-dropdown) {
+        right: 9px;
+      }
+
+      &.has-text {
+        input {
+          padding-left: 18px;
+        }
+
+        .icon:not(.icon-dropdown) {
+          right: 74px;
+        }
+      }
+    }
+  }
+}
